Next Release
============

Removals
--------

- Remove ``repoze.bfg.threadlocal.setManager``.  It was only used in
  unit tests.

Documentation
-------------

- Add description to narrative templating chapter about how to use
  Chameleon text templates.

0.9a8 (2009-05-31)
==================

Features
--------

- It is now possible to register a custom
  ``repoze.bfg.interfaces.INotFoundView`` for a given application.
  This feature replaces the
  ``repoze.bfg.interfaces.INotFoundAppFactory`` feature previously
  described in the Hooks chapter.  The INotFoundView will be called
  when the framework detects that a view lookup done as a result of a
  request fails; it should accept a context object and a request
  object; it should return an IResponse object (a webob response,
  basically).  See the Hooks narrative chapter of the BFG docs for
  more info.

- The error presented when a view invoked by the router returns a
  non-response object now includes the view's name for troubleshooting
  purposes.

Bug Fixes
---------

- A "new response" event is emitted for forbiden and notfound views.

Deprecations
------------

- The ``repoze.bfg.interfaces.INotFoundAppFactory`` interface has been
  deprecated in favor of using the new
  ``repoze.bfg.interfaces.INotFoundView`` mechanism.

Renames
-------

- Renamed ``repoze.bfg.interfaces.IForbiddenResponseFactory`` to
  ``repoze.bfg.interfaces.IForbiddenView``.

0.9a7 (2009-05-30)
==================

Features
--------

- Remove "context" argument from ``effective_principals`` and
  ``authenticated_userid`` function APIs in ``repoze.bfg.security``,
  effectively a doing reversion to 0.8 and before behavior.  Both
  functions now again accept only the ``request`` parameter.

0.9a6 (2009-05-29)
==================

Documentation
-------------

- Changed "BFG Wiki" tutorial to use AuthTktAuthenticationPolicy
  rather than repoze.who.

Features
--------

- Add an AuthTktAuthenticationPolicy.  This policy retrieves