@@ -7,6 +7,11 @@ Removals
 - Remove ``repoze.bfg.threadlocal.setManager``.  It was only used in
   unit tests.
 
+- Remove ``repoze.bfg.wsgi.HTTPException``,
+  ``repoze.bfg.wsgi.NotFound``, and ``repoze.bfg.wsgi.Unauthorized``.
+  These classes were disused with the introduction of the
+  ``IUnauthorizedView`` and ``INotFoundView`` machinery.
+
 Documentation
 -------------
 
